# encryptify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmarks.yml  ci.yml
encryptify-cli/: Cargo.toml
encryptify-cli/src/: main.rs
encryptify-lib/: Cargo.toml  README.md
encryptify-lib/benches/: encryptify_benchmarking.rs
encryptify-lib/src/: encryptor_decryptor.rs  lib.rs  zipper.rs
encryptify-lib/tests/: encryptor_decryptor_tests.rs  zipper.rs
src/: main.rs
