[package]
name = "encryptify-lib"
description = "A library for encrypting and decrypting files and folders using AES-256 bit encryption."
repository = "https://github.com/WebDevCaptain/encryptify"
authors = ["Shreyash <hello@webdevcaptain.com>"]
license = "MIT"
version = "1.0.4"
edition = "2024"

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
zip = "2.2.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "encryptify_benchmarking"
harness = false
